Implemented all base functionality
refactor: replace Timestamp with OffsetDateTime across all entities

- Migrate from java.sql.Timestamp to java.time.OffsetDateTime
- Improves timezone handling and modernizes date/time API usage
- Affects all entity classes and requires database schema updates

refactor: implement global exception handling

- Add unified exception handling mechanism
- Introduce standardized TransactionProcessingExceptionDto for error responses

feat(core): implement banking service functionality

- Transaction Service:
  * POST /transactions - create new transaction
  * GET /transactions/{id} - retrieve transaction by ID
- Account Service:
  * POST /accounts - create new accounts
  * GET /accounts/{id} - get account details
  * PATCH /accounts/{id}/balance - update balances
  * POST /accounts/{id}/limits - create account limits
  * GET /accounts/{id}/limits - retrieve account limits

feat(logging): implement request/response logging

- Log all incoming requests with metadata
- Log all outgoing responses

feat(exchange): implement ExchangeRateService

- Scheduled daily exchange rate updates
- Integration with transaction processing

feat(persistence): entity improvements

- Implement equals() and hashCode() based on ID for all JPA entities
- Add Cassandra initialization scripts
- Configure multi-datasource support (Postgres + Cassandra)

feat(validation): add input validation

- Transaction creation validation
- Account creation validation
- Balance update validation
- Return standardized error messages

feat(config): enhance application configuration

- Add profile-specific properties files:
  * application.properties
  * application-local.properties

feat(scheduling): implement scheduled tasks

- @Scheduled MON-FRI exchange rate updates at 13:10
- @Scheduled monthly limit updates
- Configurable cron expressions

BREAKING CHANGES:
- Timestamp to OffsetDateTime migration requires:
  * Database schema updates
  * Client code adjustments for date hand